updated app, refresh property added

--- a/android/app/src/main/res/layout/activity_add_admin_user.xml
+++ b/android/app/src/main/res/layout/activity_add_admin_user.xml
@@ -28,7 +28,7 @@
             android:layout_width="17dp"
             android:layout_height="17dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="@dimen/margin_normal"
+            android:layout_marginStart="@dimen/margin_start"
             android:layout_marginTop="@dimen/margin_top_header"
             android:onClick="goToBack"
             android:src="@drawable/back_icon"
@@ -73,9 +73,10 @@
                 android:layout_marginTop="10dp"
                 android:background="@drawable/edittext_bg"
                 android:hint="Email Giriniz"
-                android:inputType="textEmailAddress"
+                android:inputType="textMultiLine"
                 android:minHeight="52dp"
                 android:padding="12dp"
+                android:scrollbars="vertical"
                 android:textColor="#000000"
                 android:textColorHint="#999999"
                 android:textSize="16sp"
