--- a/android/app/src/main/res/layout/activity_firm_info.xml
+++ b/android/app/src/main/res/layout/activity_firm_info.xml
@@ -29,7 +29,7 @@
             android:layout_width="17dp"
             android:layout_height="17dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="@dimen/margin_normal"
+            android:layout_marginStart="@dimen/margin_start"
             android:layout_marginTop="@dimen/margin_top_header"
             android:onClick="goToProfile"
             android:src="@drawable/back_icon"
@@ -84,13 +84,14 @@
                 android:id="@+id/firmName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:minHeight="50dp"
                 android:layout_gravity="center"
+                android:scrollbars="vertical"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginBottom="5dp"
                 android:background="@drawable/edittext_bg"
                 android:hint="Firma Adı"
-                android:inputType="text"
-                android:minHeight="50dp"
+                android:inputType="textMultiLine"
                 android:padding="12dp"
                 android:textColor="#000000"
                 android:textColorHint="#999999"
@@ -111,12 +112,14 @@
                 <EditText
                     android:id="@+id/firmWorkArea"
                     android:layout_width="0dp"
-                    android:layout_height="@dimen/button_height"
+                    android:layout_height="wrap_content"
+                    android:minHeight="@dimen/button_height"
                     android:layout_marginEnd="2dp"
                     android:layout_weight="1"
+                    android:scrollbars="vertical"
                     android:background="@drawable/edittext_bg"
                     android:hint="Firma Çalışma Alanı"
-                    android:inputType="text"
+                    android:inputType="textMultiLine"
                     android:padding="@dimen/padding_normal"
                     android:textColor="#000000"
                     android:textColorHint="#999999"
