--- a/android/app/src/main/res/layout/activity_opinion_and_suggestion.xml
+++ b/android/app/src/main/res/layout/activity_opinion_and_suggestion.xml
@@ -30,7 +30,7 @@
             android:layout_width="17dp"
             android:layout_height="17dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="@dimen/margin_normal"
+            android:layout_marginStart="@dimen/margin_start"
             android:layout_marginTop="@dimen/margin_top_header"
             android:onClick="back"
             android:src="@drawable/back_icon"
@@ -88,14 +88,15 @@
                 android:id="@+id/feedbackMessage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:minHeight="150dp"
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="20dp"
                 android:background="@drawable/edittext_bg"
                 android:ems="15"
                 android:gravity="start|top"
                 android:inputType="textMultiLine"
+                android:minHeight="160dp"
                 android:padding="@dimen/padding_normal"
+                android:scrollbars="vertical"
                 android:textColor="#000000"
                 android:textSize="@dimen/text_normal"
                 android:textStyle="normal" />
