--- a/android/app/src/main/res/layout/activity_academic_info.xml
+++ b/android/app/src/main/res/layout/activity_academic_info.xml
@@ -27,7 +27,7 @@
             android:layout_width="17dp"
             android:layout_height="17dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="@dimen/margin_normal"
+            android:layout_marginStart="@dimen/margin_start"
             android:layout_marginTop="@dimen/margin_top_header"
             android:contentDescription="Geri"
             android:onClick="goToProfile"
@@ -79,6 +79,7 @@
                 android:id="@+id/academicEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:scrollbars="vertical"
                 android:background="@drawable/edittext_bg"
                 android:gravity="start|top"
                 android:inputType="textMultiLine"
