--- a/android/app/src/main/res/layout/activity_academician_preview.xml
+++ b/android/app/src/main/res/layout/activity_academician_preview.xml
@@ -51,6 +51,7 @@
                 android:layout_width="17dp"
                 android:layout_height="17dp"
                 android:layout_marginTop="@dimen/margin_top_header"
+                android:layout_marginStart="@dimen/margin_start"
                 android:contentDescription="Geri"
                 android:onClick="prevPage"
                 android:src="@drawable/back_icon"
