--- a/android/app/src/main/res/layout/activity_admin_panel.xml
+++ b/android/app/src/main/res/layout/activity_admin_panel.xml
@@ -28,7 +28,7 @@
             android:layout_width="17dp"
             android:layout_height="17dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="@dimen/margin_normal"
+            android:layout_marginStart="@dimen/margin_start"
             android:layout_marginTop="@dimen/margin_top_header"
             android:onClick="goToMain"
             android:src="@drawable/back_icon"
@@ -544,6 +544,7 @@
                         android:layout_marginVertical="-4dp"
                         android:background="#DDDDDD" />
 
+                    <!--Admin Ekle-->
                     <Button
                         android:id="@+id/btnAdminKullanici"
                         android:layout_width="match_parent"
@@ -555,6 +556,29 @@
                         android:onClick="adminUser"
                         android:paddingStart="16dp"
                         android:text="🪪 Admin Kullanıcısı Ekle"
+                        android:textColor="#000000"
+                        android:textStyle="bold"
+                        app:cornerRadius="10dp"
+                        tools:ignore="OnClick" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginVertical="-4dp"
+                        android:background="#DDDDDD" />
+
+                    <!--Raporlar / Şikayetler-->
+                    <Button
+                        android:id="@+id/btnReportsAndComplaints"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:layout_marginVertical="3dp"
+                        android:backgroundTint="#FFFFFF"
+                        android:elevation="2dp"
+                        android:gravity="start|center_vertical"
+                        android:onClick="reportsAndComplaints"
+                        android:paddingStart="16dp"
+                        android:text="📄 Raporlar / Şikayetler"
                         android:textColor="#000000"
                         android:textStyle="bold"
                         app:cornerRadius="10dp"
