--- a/android/app/src/main/res/layout/activity_consultancy_fields.xml
+++ b/android/app/src/main/res/layout/activity_consultancy_fields.xml
@@ -28,7 +28,7 @@
             android:layout_width="17dp"
             android:layout_height="17dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="@dimen/margin_normal"
+            android:layout_marginStart="@dimen/margin_start"
             android:layout_marginTop="@dimen/margin_top_header"
             android:onClick="goToProfile"
             android:src="@drawable/back_icon"
@@ -100,9 +100,10 @@
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginBottom="5dp"
                 android:background="@drawable/edittext_bg"
-                android:inputType="text"
+                android:inputType="textMultiLine"
                 android:minHeight="52dp"
                 android:padding="12dp"
+                android:scrollbars="vertical"
                 android:textColor="#000000"
                 android:textColorHint="#999999"
                 android:textSize="@dimen/text_normal2"
