--- a/android/app/src/main/res/layout/activity_industry_info.xml
+++ b/android/app/src/main/res/layout/activity_industry_info.xml
@@ -29,7 +29,7 @@
             android:layout_width="17dp"
             android:layout_height="17dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="@dimen/margin_normal"
+            android:layout_marginStart="@dimen/margin_start"
             android:layout_marginTop="@dimen/margin_top_header"
             android:onClick="backToProfile"
             android:src="@drawable/back_icon"
@@ -82,14 +82,16 @@
             <EditText
                 android:id="@+id/industryFirmName"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginVertical="7dp"
                 android:background="@drawable/edittext_bg"
                 android:hint="Firma Adı"
-                android:inputType="text"
+                android:inputType="textMultiLine"
+                android:minHeight="50dp"
                 android:padding="12dp"
+                android:scrollbars="vertical"
                 android:textColor="#000000"
                 android:textColorHint="#999999"
                 android:textSize="16sp"
@@ -117,7 +119,8 @@
                 android:layout_marginVertical="7dp"
                 android:background="@drawable/edittext_bg"
                 android:hint="Çalışma Alanı"
-                android:inputType="text"
+                android:inputType="textMultiLine"
+                android:scrollbars="vertical"
                 android:padding="12dp"
                 android:textColor="#000000"
                 android:textColorHint="#999999"
