--- a/android/app/src/main/res/layout/activity_industry_worker_info.xml
+++ b/android/app/src/main/res/layout/activity_industry_worker_info.xml
@@ -29,7 +29,7 @@
             android:layout_width="17dp"
             android:layout_height="17dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="@dimen/margin_normal"
+            android:layout_marginStart="@dimen/margin_start"
             android:layout_marginTop="@dimen/margin_top_header"
             android:onClick="backToProfile"
             android:src="@drawable/back_icon"
@@ -111,10 +111,12 @@
             <EditText
                 android:id="@+id/employeePosition"
                 android:layout_width="match_parent"
-                android:layout_height="54dp"
+                android:layout_height="wrap_content"
+                android:minHeight="50dp"
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginVertical="7dp"
+                android:scrollbars="vertical"
                 android:background="@drawable/edittext_bg"
                 android:hint="Çalışma Alanı"
                 android:inputType="text"
