--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -123,7 +123,58 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/btnAcademician" />
 
+        <!--Giriş yap-->
+        <LinearLayout
+            android:id="@+id/text_info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="@dimen/margin_normal"
+            android:gravity="center"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/btnIndustry">
+
+            <View
+                android:layout_width="90dp"
+                android:layout_height="1dp"
+                android:background="#999999" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/margin_horizontal_s"
+                android:text="Giriş yapmadan devam et"
+                android:textColor="#888888"
+                android:textSize="@dimen/text_small" />
+
+            <View
+                android:layout_width="90dp"
+                android:layout_height="1dp"
+                android:background="#999999" />
+        </LinearLayout>
+
+        <!-- Açık talepleri gör -->
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnSeeOpenRequests"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/button_height"
+            android:layout_marginHorizontal="@dimen/margin_large"
+            android:layout_marginTop="@dimen/margin_top_header"
+            android:onClick="seeOpenRequests"
+            android:text="Açık Talepleri Gör"
+            android:textColor="@android:color/black"
+            android:textSize="@dimen/text_normal2"
+            app:backgroundTint="#EEEEEE"
+            app:cornerRadius="@dimen/card_corner"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/text_info"
+            tools:ignore="OnClick" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     <!-- Alt bilgi -->
     <TextView
