--- a/android/app/src/main/res/layout/activity_old_request_detail.xml
+++ b/android/app/src/main/res/layout/activity_old_request_detail.xml
@@ -29,7 +29,7 @@
             android:layout_width="17dp"
             android:layout_height="17dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="@dimen/margin_normal"
+            android:layout_marginStart="@dimen/margin_start"
             android:layout_marginTop="@dimen/margin_top_header"
             android:onClick="previousPage"
             android:src="@drawable/back_icon"
