--- a/android/app/src/main/res/layout/activity_previous_consultancies.xml
+++ b/android/app/src/main/res/layout/activity_previous_consultancies.xml
@@ -29,7 +29,7 @@
             android:layout_width="17dp"
             android:layout_height="17dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="@dimen/margin_normal"
+            android:layout_marginStart="@dimen/margin_start"
             android:layout_marginTop="@dimen/margin_top_header"
             android:onClick="goToProfile"
             android:src="@drawable/back_icon"
@@ -96,12 +96,13 @@
                 android:id="@+id/prevConsultancyOfArea"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:minHeight="50dp"
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginBottom="5dp"
+                android:scrollbars="vertical"
                 android:background="@drawable/edittext_bg"
-                android:inputType="text"
-                android:minHeight="50dp"
+                android:inputType="textMultiLine"
                 android:padding="12dp"
                 android:textColor="#000000"
                 android:textColorHint="#999999"
