--- a/android/app/src/main/res/layout/activity_profession_info.xml
+++ b/android/app/src/main/res/layout/activity_profession_info.xml
@@ -30,7 +30,7 @@
             android:layout_width="17dp"
             android:layout_height="17dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="@dimen/margin_normal"
+            android:layout_marginStart="@dimen/margin_start"
             android:layout_marginTop="@dimen/margin_top_header"
             android:onClick="goToProfile"
             android:src="@drawable/back_icon"
@@ -103,8 +103,9 @@
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginVertical="5dp"
+                android:scrollbars="vertical"
                 android:background="@drawable/edittext_bg"
-                android:inputType="text"
+                android:inputType="textMultiLine"
                 android:padding="12dp"
                 android:textColor="#000000"
                 android:textColorHint="#999999"
