--- a/android/app/src/main/res/layout/activity_request_content.xml
+++ b/android/app/src/main/res/layout/activity_request_content.xml
@@ -27,7 +27,7 @@
             android:layout_width="17dp"
             android:layout_height="17dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="@dimen/margin_normal"
+            android:layout_marginStart="@dimen/margin_start"
             android:layout_marginTop="@dimen/margin_top_header"
             android:onClick="goToCreateRequest"
             android:src="@drawable/back_icon"
@@ -104,6 +104,7 @@
                 android:inputType="textMultiLine"
                 android:minHeight="50dp"
                 android:padding="12dp"
+                android:scrollbars="vertical"
                 android:textColor="#000000"
                 android:textSize="16sp" />
 
@@ -148,6 +149,7 @@
                 android:inputType="textMultiLine"
                 android:minHeight="120dp"
                 android:padding="10dp"
+                android:scrollbars="vertical"
                 android:textColor="#000000"
                 android:textSize="16sp"
                 android:textStyle="normal" />
