--- a/android/app/src/main/res/layout/activity_request_subject_student.xml
+++ b/android/app/src/main/res/layout/activity_request_subject_student.xml
@@ -28,7 +28,7 @@
             android:layout_width="17dp"
             android:layout_height="17dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="@dimen/margin_normal"
+            android:layout_marginStart="@dimen/margin_start"
             android:layout_marginTop="@dimen/margin_top_header"
             android:onClick="goToPrev"
             android:src="@drawable/back_icon"
@@ -98,14 +98,16 @@
             <EditText
                 android:id="@+id/reqTitle"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginVertical="10dp"
                 android:background="@drawable/edittext_bg"
                 android:gravity="start|top"
                 android:inputType="textMultiLine"
+                android:minHeight="50dp"
                 android:padding="12dp"
+                android:scrollbars="vertical"
                 android:textColor="#000000"
                 android:textSize="16sp" />
 
@@ -141,7 +143,7 @@
             <EditText
                 android:id="@+id/reqMessage"
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginVertical="10dp"
@@ -149,7 +151,9 @@
                 android:ems="15"
                 android:gravity="start|top"
                 android:inputType="textMultiLine"
+                android:minHeight="120dp"
                 android:padding="10dp"
+                android:scrollbars="vertical"
                 android:textColor="#000000"
                 android:textSize="16sp"
                 android:textStyle="normal" />
