--- a/android/app/src/main/res/layout/fragment_request_academician.xml
+++ b/android/app/src/main/res/layout/fragment_request_academician.xml
@@ -7,20 +7,28 @@
     android:background="#FFFFFF"
     tools:context=".view.academicianView.RequestAcademicianFragment">
 
-    <!-- Kaydırılabilir içerik -->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/requestAcademicianRecyclerView"
+    <!-- REFRESH -->
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefreshLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:clipToPadding="false"
-        android:overScrollMode="always"
-        android:paddingTop="12dp"
-        android:paddingBottom="12dp"
-        app:layout_constraintBottom_toTopOf="@id/createAcademicianRequest"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/item_request_card" />
+        app:layout_constraintBottom_toTopOf="@id/createAcademicianRequest"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <!-- RecyclerView -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/requestAcademicianRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clipToPadding="false"
+            android:overScrollMode="always"
+            android:paddingTop="12dp"
+            android:paddingBottom="12dp"
+            tools:listitem="@layout/item_request_card" />
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <!-- Yeni Talep Butonu -->
     <com.google.android.material.button.MaterialButton
