--- a/android/app/src/main/res/layout/item_open_request.xml
+++ b/android/app/src/main/res/layout/item_open_request.xml
@@ -2,8 +2,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:elevation="0dp"
     android:layout_marginBottom="1dp"
+    android:elevation="0dp"
     app:cardBackgroundColor="#FFFFFF">
 
     <LinearLayout
@@ -48,10 +48,10 @@
                         android:id="@+id/openRequestTitle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:ellipsize="end"
-                        android:singleLine="true"
                         android:layout_weight="1"
+                        android:ellipsize="end"
                         android:maxLines="1"
+                        android:singleLine="true"
                         android:text="Talep Başlığı"
                         android:textColor="#000000"
                         android:textSize="16sp"
@@ -65,8 +65,8 @@
                         android:layout_marginTop="1dp"
                         android:clipToOutline="true"
                         android:ellipsize="end"
-                        android:singleLine="true"
                         android:maxLines="1"
+                        android:singleLine="true"
                         android:text="Talep Tipi"
                         android:textColor="#000000"
                         android:textSize="13sp" />
@@ -74,13 +74,13 @@
                 </LinearLayout>
 
 
-
             </LinearLayout>
 
             <ImageView
+                android:id="@+id/requestComplaint"
                 android:layout_width="15dp"
                 android:layout_height="15dp"
-                android:src="@drawable/three_point_icon"/>
+                android:src="@drawable/three_point_icon" />
         </LinearLayout>
 
         <!-- Talep açıklaması -->
@@ -89,8 +89,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:maxLines="3"
             android:ellipsize="end"
+            android:maxLines="3"
             android:scrollHorizontally="false"
             android:singleLine="false"
             android:text="Talep açıklaması buraya gelecek..."
@@ -140,17 +140,17 @@
                 <ImageView
                     android:layout_width="15dp"
                     android:layout_height="15dp"
-                    android:layout_marginEnd="5dp"
                     android:layout_gravity="center"
-                    android:src="@drawable/apply_icon"/>
+                    android:layout_marginEnd="5dp"
+                    android:src="@drawable/apply_icon" />
 
                 <TextView
                     android:id="@+id/applyCount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="13sp"
+                    android:text="0 Başvuru"
                     android:textColor="#000000"
-                    android:text="0 Başvuru"/>
+                    android:textSize="13sp" />
 
             </LinearLayout>
 
