--- a/android/app/src/main/res/menu/more_menu.xml
+++ b/android/app/src/main/res/menu/more_menu.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item
+        android:id="@+id/report"
+        android:title="Şikayet Et"/>
+
+    <item
+        android:id="@+id/block"
+        android:title="Engelle"/>
 </menu>
