--- a/android/app/src/main/res/values/dimens.xml
+++ b/android/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
     <dimen name="margin_xsmall">5dp</dimen>
     <dimen name="margin_small">8dp</dimen>
     <dimen name="margin_normal">15dp</dimen>
+    <dimen name="margin_start">20dp</dimen>
     <dimen name="margin_large">24dp</dimen>
     <dimen name="margin_xlarge">32dp</dimen>
     <dimen name="margin_top_header">12dp</dimen>
