--- a/android/app/src/main/res/layout/activity_sign_up.xml
+++ b/android/app/src/main/res/layout/activity_sign_up.xml
@@ -69,10 +69,10 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:minHeight="@dimen/button_height"
                 android:layout_marginTop="@dimen/margin_top_header"
                 android:background="@drawable/edittext_bg"
                 android:gravity="center_vertical"
+                android:minHeight="@dimen/button_height"
                 android:orientation="horizontal"
                 android:paddingHorizontal="@dimen/padding_normal">
 
@@ -104,10 +104,10 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:minHeight="@dimen/button_height"
                 android:layout_marginTop="@dimen/margin_top_header"
                 android:background="@drawable/edittext_bg"
                 android:gravity="center_vertical"
+                android:minHeight="@dimen/button_height"
                 android:orientation="horizontal"
                 android:paddingHorizontal="@dimen/padding_normal">
 
@@ -136,14 +136,14 @@
 
             <!-- Kayıt Ol -->
             <Button
-                android:id="@+id/btnSignUp"
+                android:id="@+id/btnGoForward"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/button_height"
                 android:layout_marginTop="@dimen/margin_normal"
                 android:backgroundTint="#124090"
                 android:elevation="8dp"
-                android:onClick="signUp"
-                android:text="Kayıt Ol"
+                android:onClick="goForward"
+                android:text="Devam"
                 android:textColor="#FFFFFF"
                 android:textSize="@dimen/text_normal"
                 android:textStyle="bold"
@@ -198,11 +198,11 @@
                 android:layout_height="@dimen/button_height"
                 android:layout_marginVertical="@dimen/margin_xsmall"
                 android:backgroundTint="#EEEEEE"
+                android:onClick="forgotPassword"
                 android:text="Şifremi Unuttum"
                 android:textColor="#000000"
                 android:textSize="@dimen/text_normal"
                 app:cornerRadius="10dp"
-                android:onClick="forgotPassword"
                 tools:ignore="OnClick" />
 
             <!--Alt Bilgi-->
@@ -219,6 +219,21 @@
 
         </LinearLayout>
     </ScrollView>
+
+    <!-- Geri Butonu -->
+    <ImageView
+        android:id="@+id/btnBack"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginStart="@dimen/margin_start"
+        android:layout_marginTop="@dimen/margin_large"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:contentDescription="Geri"
+        android:onClick="gotoBack"
+        android:padding="4dp"
+        android:src="@drawable/back_icon"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
