--- a/android/app/src/main/res/layout/activity_sign_up_industry.xml
+++ b/android/app/src/main/res/layout/activity_sign_up_industry.xml
@@ -69,10 +69,10 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:minHeight="@dimen/button_height"
                 android:layout_marginTop="@dimen/margin_top_header"
                 android:background="@drawable/edittext_bg"
                 android:gravity="center_vertical"
+                android:minHeight="@dimen/button_height"
                 android:orientation="horizontal"
                 android:paddingHorizontal="@dimen/padding_normal">
 
@@ -104,10 +104,10 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:minHeight="@dimen/button_height"
                 android:layout_marginTop="@dimen/margin_top_header"
                 android:background="@drawable/edittext_bg"
                 android:gravity="center_vertical"
+                android:minHeight="@dimen/button_height"
                 android:orientation="horizontal"
                 android:paddingHorizontal="@dimen/padding_normal">
 
@@ -199,11 +199,11 @@
                 android:layout_height="@dimen/button_height"
                 android:layout_marginVertical="@dimen/margin_xsmall"
                 android:backgroundTint="#EEEEEE"
+                android:onClick="forgotPassword"
                 android:text="Şifremi Unuttum"
                 android:textColor="#000000"
                 android:textSize="@dimen/text_normal"
                 app:cornerRadius="10dp"
-                android:onClick="forgotPassword"
                 tools:ignore="OnClick" />
 
             <!--Alt Bilgi-->
@@ -220,5 +220,21 @@
 
         </LinearLayout>
     </ScrollView>
+
+    <!-- Geri Butonu -->
+    <ImageView
+        android:id="@+id/btnBack"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginStart="@dimen/margin_start"
+        android:layout_marginTop="@dimen/margin_large"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:contentDescription="Geri"
+        android:onClick="gotoBack"
+        android:padding="4dp"
+        android:src="@drawable/back_icon"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="OnClick" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
