--- a/android/app/src/main/res/layout/activity_sign_up_industry_email.xml
+++ b/android/app/src/main/res/layout/activity_sign_up_industry_email.xml
@@ -70,15 +70,15 @@
                 android:id="@+id/industryMailSignUp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:minHeight="@dimen/button_height"
                 android:layout_marginTop="@dimen/margin_normal"
                 android:background="@drawable/edittext_bg"
                 android:hint="E-Mail"
                 android:inputType="textEmailAddress"
+                android:minHeight="@dimen/button_height"
                 android:padding="@dimen/padding_normal"
                 android:textColor="#000000"
                 android:textColorHint="#999999"
-                android:textSize="@dimen/text_normal2"/>
+                android:textSize="@dimen/text_normal2" />
 
             <!-- Devam -->
             <Button
@@ -94,7 +94,7 @@
                 android:textSize="@dimen/text_normal"
                 android:textStyle="bold"
                 app:cornerRadius="10dp"
-                tools:ignore="OnClick"  />
+                tools:ignore="OnClick" />
 
             <!--Veya-->
             <LinearLayout
@@ -144,11 +144,11 @@
                 android:layout_height="@dimen/button_height"
                 android:layout_marginVertical="@dimen/margin_xsmall"
                 android:backgroundTint="#EEEEEE"
+                android:onClick="forgotPassword"
                 android:text="Şifremi Unuttum"
                 android:textColor="#000000"
                 android:textSize="@dimen/text_normal"
                 app:cornerRadius="10dp"
-                android:onClick="forgotPassword"
                 tools:ignore="OnClick" />
 
             <!--Alt Bilgi-->
@@ -165,5 +165,21 @@
 
         </LinearLayout>
     </ScrollView>
+
+    <!-- Geri Butonu -->
+    <ImageView
+        android:id="@+id/btnBack"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginStart="@dimen/margin_start"
+        android:layout_marginTop="@dimen/margin_large"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:contentDescription="Geri"
+        android:onClick="gotoBack"
+        android:padding="4dp"
+        android:src="@drawable/back_icon"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="OnClick" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
