--- a/android/app/src/main/res/layout/activity_incoming_request_detail.xml
+++ b/android/app/src/main/res/layout/activity_incoming_request_detail.xml
@@ -108,10 +108,10 @@
                         android:layout_width="45dp"
                         android:layout_height="45dp"
                         android:layout_gravity="center"
-                        android:layout_marginRight="17dp"
+                        android:layout_marginRight="15dp"
                         android:background="@drawable/rounded_img"
                         android:clipToOutline="true"
-                        android:src="@drawable/logo" />
+                        android:src="@drawable/usi_logo" />
 
                     <LinearLayout
                         android:layout_width="280dp"
@@ -590,13 +590,24 @@
                             android:textSize="14sp"
                             android:textStyle="bold" />
 
-                        <com.google.android.flexbox.FlexboxLayout
-                            android:id="@+id/requestsContainer"
+                        <!-- Yatay kaydırma alanı -->
+                        <HorizontalScrollView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal"
-                            app:flexWrap="wrap"
-                            app:justifyContent="flex_start" />
+                            android:overScrollMode="never"
+                            android:scrollbars="none">
+
+                            <LinearLayout
+                                android:id="@+id/requestsContainer"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:gravity="center_vertical"
+                                android:orientation="horizontal"
+                                android:paddingVertical="5dp"
+                                android:paddingStart="4dp"
+                                android:paddingEnd="4dp" />
+                        </HorizontalScrollView>
+
                     </LinearLayout>
                 </LinearLayout>
             </com.google.android.material.card.MaterialCardView>
