--- a/android/app/src/main/res/layout/activity_industry.xml
+++ b/android/app/src/main/res/layout/activity_industry.xml
@@ -70,11 +70,11 @@
                 android:id="@+id/industryMail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:minHeight="@dimen/button_height"
                 android:layout_marginTop="@dimen/margin_normal"
                 android:background="@drawable/edittext_bg"
                 android:hint="E-Mail"
                 android:inputType="textEmailAddress"
+                android:minHeight="@dimen/button_height"
                 android:padding="@dimen/padding_normal"
                 android:textColor="#000000"
                 android:textColorHint="#999999"
@@ -84,10 +84,10 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:minHeight="@dimen/button_height"
                 android:layout_marginTop="@dimen/margin_top_header"
                 android:background="@drawable/edittext_bg"
                 android:gravity="center_vertical"
+                android:minHeight="@dimen/button_height"
                 android:orientation="horizontal"
                 android:paddingHorizontal="@dimen/padding_normal">
 
@@ -199,6 +199,21 @@
 
         </LinearLayout>
     </ScrollView>
+
+    <!-- Geri Butonu -->
+    <ImageView
+        android:id="@+id/btnBack"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginStart="@dimen/margin_start"
+        android:layout_marginTop="@dimen/margin_large"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:contentDescription="Geri"
+        android:onClick="gotoBack"
+        android:padding="4dp"
+        android:src="@drawable/back_icon"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
