--- a/android/app/src/main/res/layout/activity_profession_info.xml
+++ b/android/app/src/main/res/layout/activity_profession_info.xml
@@ -86,8 +86,8 @@
             <TextView
                 android:id="@+id/warning"
                 android:layout_width="match_parent"
-                android:layout_marginHorizontal="20dp"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginBottom="5dp"
                 android:text="Lütfen uzmanlık alanlarınızı giriniz ve Ekle butonuna basınız!"
@@ -99,14 +99,14 @@
                 android:id="@+id/professionText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:minHeight="50dp"
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginVertical="5dp"
-                android:scrollbars="vertical"
                 android:background="@drawable/edittext_bg"
                 android:inputType="textMultiLine"
+                android:minHeight="50dp"
                 android:padding="12dp"
+                android:scrollbars="vertical"
                 android:textColor="#000000"
                 android:textColorHint="#999999"
                 android:textSize="@dimen/text_normal2"
@@ -156,7 +156,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="start"
-                    android:text="📭 Henüz hiç firma bilgisi eklenmemiş"
+                    android:text="📭 Henüz hiç uzmanlık alanı eklenmemiş"
                     android:textColor="#626161"
                     android:textSize="15sp" />
 
