--- a/android/app/src/main/res/layout/activity_request_detail_student.xml
+++ b/android/app/src/main/res/layout/activity_request_detail_student.xml
@@ -147,10 +147,10 @@
                         android:layout_width="50dp"
                         android:layout_height="50dp"
                         android:layout_gravity="center"
-                        android:layout_marginRight="17dp"
+                        android:layout_marginRight="15dp"
                         android:background="@drawable/rounded_img"
                         android:clipToOutline="true"
-                        android:src="@drawable/logo" />
+                        android:src="@drawable/usi_logo" />
 
                     <LinearLayout
                         android:layout_width="280dp"
