--- a/android/app/src/main/res/layout/activity_update_password.xml
+++ b/android/app/src/main/res/layout/activity_update_password.xml
@@ -48,6 +48,17 @@
             android:textStyle="bold" />
     </com.google.android.material.card.MaterialCardView>
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:indeterminate="true"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <!--ScrollView-->
     <ScrollView
         android:id="@+id/scrollView33"
@@ -84,8 +95,6 @@
                 android:id="@+id/userMail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:minHeight="50dp"
-                android:scrollbars="vertical"
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginTop="20dp"
@@ -93,7 +102,9 @@
                 android:background="@drawable/edittext_bg"
                 android:hint="Mailinizi Giriniz"
                 android:inputType="textEmailAddress"
+                android:minHeight="50dp"
                 android:padding="12dp"
+                android:scrollbars="vertical"
                 android:textColor="#000000"
                 android:textColorHint="#999999"
                 android:textSize="16sp" />
