--- a/android/app/src/main/res/layout/fragment_student_profile.xml
+++ b/android/app/src/main/res/layout/fragment_student_profile.xml
@@ -56,7 +56,6 @@
 
     </com.google.android.material.card.MaterialCardView>
 
-
     <!-- SwipeRefreshLayout -->
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefreshLayout"
@@ -101,8 +100,8 @@
 
                     <ImageView
                         android:id="@+id/addImage"
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
                         android:layout_gravity="bottom|end"
                         android:layout_marginEnd="27dp"
                         android:layout_marginBottom="17dp"
@@ -116,7 +115,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="3dp"
-                    android:text="Öğrenci Adı"
+                    android:text="Öğrenci Adı Bulunamadı"
                     android:textColor="#000000"
                     android:textSize="20sp"
                     android:textStyle="bold" />
@@ -127,7 +126,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="3dp"
-                    android:text="Öğrenci Maili"
+                    android:text="Öğrenci Maili Bulunamadı"
                     android:textColor="#666666"
                     android:textSize="16sp" />
 
