--- a/android/app/src/main/res/layout/item_apply_users.xml
+++ b/android/app/src/main/res/layout/item_apply_users.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:layout_marginVertical="10dp"
     android:onClick="onApplyUserCardClick"
-    app:cardBackgroundColor="#e8ecf4"
+    app:cardBackgroundColor="#F2F2F2"
     app:cardCornerRadius="10dp"
     app:cardElevation="1dp">
 
