--- a/android/app/src/main/res/layout/item_selected_academician.xml
+++ b/android/app/src/main/res/layout/item_selected_academician.xml
@@ -7,7 +7,7 @@
     android:layout_marginHorizontal="12dp"
     android:layout_marginVertical="10dp"
     android:onClick="onAcademicianCardClick"
-    app:cardBackgroundColor="@android:color/white"
+    app:cardBackgroundColor="#F2F2F2"
     app:cardCornerRadius="15dp"
     app:cardElevation="1dp">
 
