Admin panel updated

--- a/android/app/src/main/res/layout/activity_admin_panel.xml
+++ b/android/app/src/main/res/layout/activity_admin_panel.xml
@@ -71,6 +71,7 @@
 
                 <!-- Kullanıcı İstatistikleri -->
                 <TextView
+                    android:id="@+id/universityNameTextview"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginVertical="12dp"
