old requests and pending requests activities updated

--- a/android/app/src/main/res/layout/activity_pending_request_detail.xml
+++ b/android/app/src/main/res/layout/activity_pending_request_detail.xml
@@ -70,6 +70,7 @@
 
             <!--Talep Sahibi-->
             <com.google.android.material.card.MaterialCardView
+                android:id="@+id/goToRequesterPreview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="5dp"
